<resources>
    <string name="app_name">MViG-Android-User</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="action_new_account">Create New Account</string>
    <string name="error_not_equals_passwords">Password mismatch</string>
    <string name="title_activity_activation">ActivationActivity</string>
    <string name="title_activity_message_send">MessageSend</string>
    <string name="error_email_exist">Bu mail adresi kullanılıyor</string>
</resources>
